tests/codegen/fail/input-object/derive_no_fields.rs
use coasys_juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
struct Object {}

fn main() {}
